Fixed feedback message sometimes going off-screen. Added button to lock the deck area. Added hints to what is allowed for deck names.

--- a/conquestdb/decks/static/createdeck.css
+++ b/conquestdb/decks/static/createdeck.css
@@ -140,7 +140,7 @@
 }
 
 #deck-container {
-    position: fixed;
+    position: absolute;
     left: 100px;
     top: 100px;
 }
@@ -273,7 +273,7 @@
     margin-right:10px;
 }
 
-#card-submit, #deck-submit-1 {
+#card-submit, #deck-submit-1, #toggle-position-type-deck {
     border: none;
     background-color: blue;
     color: white;
